--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^15.0.2",
     "@testing-library/user-event": "^14.5.2",
     "animate.css": "^4.1.1",
+    "cesium": "^1.116.0",
     "loaders.css": "^0.1.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
@@ -26,9 +27,9 @@
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -50,6 +51,8 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.1.1"
+    "craco-cesium": "^1.2.0",
+    "gh-pages": "^6.1.1",
+    "html-webpack-plugin": "^5.6.0"
   }
 }
